--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,8 @@
 name: Test project
 on:
     push
+env:
+    WORKING_DIR: "./02 Starting Project"
 jobs:
     test:
         runs-on: ubuntu-latest
@@ -12,6 +14,8 @@ jobs:
               with:
                 node-version: 18
             - name: Install dependencies
+              working-directory: "$WORKING_DIR"
               run: npm ci
             - name: Run tests
+              working-directory: "$WORKING_DIR"
               run: npm test           
